--- a/app/globals.css
+++ b/app/globals.css
@@ -51,3 +51,22 @@
     --ring: 0 72.2% 50.6%;
   }
 }
+*, ::before, ::after {
+    
+}
+.scrollbar-w-2::-webkit-scrollbar {
+  width: 0.40rem;
+  height: 0.30rem;
+}
+
+.scrollbar-track-blue-lighter::-webkit-scrollbar-track {
+  --bg-opacity: 1;
+  background-color: #f5eded; /* Lighter red color */
+  background-color: rgba(250, 221, 221, var(--bg-opacity));
+}
+
+.scrollbar-thumb-blue::-webkit-scrollbar-thumb {
+  --bg-opacity: 0.4;
+  background-color: hsl(0, 70%, 40%); /* Slightly less vivid red */
+  background-color: rgba(255, 51, 51, var(--bg-opacity));
+}
